--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "description": "A TypeScript-based tool for analyzing Angular projects, providing detailed counts and categorizations of components, directives, pipes, and services.",
   "main": "dist/index.js",
-  "scripts": {
-    "start": "tsc && node dist/index.js"
+  "bin": {
+    "ng-stats": "./dist/index.js"
   },
-  "keywords": ["angular"],
+  "scripts": {
+    "start": "tsc && node dist/index.js",
+    "build": "tsc"
+  },
+  "keywords": [
+    "angular"
+  ],
   "author": "tomer953",
   "license": "MIT",
   "dependencies": {
