--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "license": "MIT",
   "dependencies": {
     "cli-table3": "^0.6.4",
-    "figlet": "^1.7.0"
+    "figlet": "^1.7.0",
+    "minimist": "^1.2.8"
   },
   "devDependencies": {
     "@types/figlet": "^1.5.8",
+    "@types/minimist": "^1.2.5",
     "@types/node": "^20.12.10",
     "typescript": "^5.4.5"
   }
