--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-stats",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "A TypeScript-based tool for analyzing Angular projects, providing detailed counts and categorizations of components, directives, pipes, and services.",
   "main": "dist/index.js",
   "bin": {
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "tsc && node dist/index.js",
     "build": "tsc",
-    "prepublish": "npm run build"
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run build"
   },
   "homepage": "https://github.com/tomer953/ngx-stats",
   "repository": {
@@ -25,12 +26,15 @@
   "dependencies": {
     "cli-table3": "^0.6.4",
     "figlet": "^1.7.0",
-    "minimist": "^1.2.8"
+    "minimist": "^1.2.8",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@types/figlet": "^1.5.8",
     "@types/minimist": "^1.2.5",
-    "@types/node": "^20.12.10",
-    "typescript": "^5.4.5"
-  }
+    "@types/node": "^20.12.10"
+  },
+  "files": [
+    "dist/**"
+  ]
 }
